--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <h3>Result: </h3>
     <p id="countTxtResult"> The result will be displayed here!</p>
 
-    <script src="assets/js/script.js"></script>
+    <script src="asset/script/script.js"></script>
 </body>
 </html>
